--- a/CotizacionJaula.html
+++ b/CotizacionJaula.html
@@ -161,7 +161,7 @@
         <button type="button" id="btnAplicarAjuste"><i class="fas fa-check"></i> Aplicar</button>
         <button type="button" class="secondary" id="btnQuitarAjuste"><i class="fas fa-undo"></i> Quitar</button>
       </div>
-      <small>Este ajuste no se guarda en AppSheet; solo modifica esta vista antes de imprimir, enviar o descargar.</small>
+      <small>ATENCIÓN! Este ajuste no se guarda en el Sistema; solo modifica esta vista antes de imprimir, enviar o descargar.</small>
     </div>
 
     <div class="section">
